Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-36133

HPS not correct post warmup when shut down mid-snapshot (replica)

    XMLWordPrintable

Details

    • Triaged
    • No
    • KV-Engine MH 2nd Beta, KV-Engine Mad-Hatter GA

    Description

      If we shutdown then warmup mid-snapshot (that contains a prepare) then post warmup we will expose a HPS value that is invalid as the replica has not received a full snapshot. We should only move the HPS value on complete snapshots.

      Say we receive a memory snapshot marker with snap start of 1 and snap end of 2. We receive a prepare at seqno 1. If we crash and warmup after persisting seqno 1 but not 2 then we will set the HPS value to 1 which is incorrect and breaks durability constraints. Before crashing our in-memory HPS would remain at 0 as we need an entire sanpshot to move the HPS.

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-36133
          # Subject Branch Project Status CR V

          Activity

            People

              ben.huddleston Ben Huddleston
              ben.huddleston Ben Huddleston
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty